--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -73,6 +73,7 @@ set(CLIENT_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/modifiers/globalgravity
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/modifiers/simplegravity
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/modifiers/geometrycollide
+    ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/modifiers/geometryculling
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/modifiers/wind
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/emitters/noop
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/emitters/point
