--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,6 @@ env:
 
 notifications:
   webhooks: http://n.tkte.ch/h/2910/Rm7oDLYIC1icyntUug11eWi1
+  on_success: never # default: always
+  on_failure: always # default: always
+  on_start: false # default: false
