--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,41 @@
 language: cpp
 before_install:
   # Install dependencies
-  - sudo add-apt-repository "deb http://ppa.launchpad.net/zoogie/sdl2-snapshots/ubuntu precise main"
   - sudo apt-get update
-  - sudo apt-get -y install build-essential zlib1g-dev libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libenet-dev
+  - sudo apt-get -y install build-essential zlib1g-dev libsdl1.2-dev libsdl-image1.2-dev libsdl-mixer1.2-dev libenet-dev
   - sudo apt-get -y install mingw32
 
 script:
-  - (mkdir cmakebuild && cd cmakebuild && cmake $CMAKE_FLAGS .. && make -j5 && cd .. && rm -rf cmakebuild)
+  - (mkdir cmakebuild && cd cmakebuild && cmake $CMAKE_FLAGS .. && make -j5 install && cd .. && rm -rf cmakebuild)
 
-compiler:
-  - clang
-  - gcc
-  
 env:
-  - CMAKE_FLAGS=
-  - CMAKE_FLAGS=-DRELEASE_BUILD=1
+  global:
+  - secure: UUtdYLhd9+cY+bMrcRvvtjmsQBqM5L9zgzyLeQZLMmmWbHwLsfpQask9A8eD1oc1K1o0tYmK+Qk1flxNTbnUtlryPNgJxJ95a/TwLl1P9yN6plMleNbuwMs5dyS9VnmcK3LzDFuoje/9rtX2seNR2PW2EJSvPz20ENaT693Kfa8=
+  - secure: G8rRE17KDx83crRLQSEkIyvMbXlbpKDvIYoKE+y9Bg3qu79tsB/RrNdo6OGHx4x3KhBGpuo4NdN/4FAGS599P4W+KN3kNr9VFSCMJhJK59+KkYfGq2rX1oGDhB4B1xjVk0tj6bFIJ333hVLEYFviIKYxRSZfnKa0RmgBJZbvMfs= 
+  
+  matrix:
+  - CXX=clang++ CC=clang CMAKE_FLAGS=
+  - CXX=clang++ CC=clang CMAKE_FLAGS=-DRELEASE_BUILD=1
+  - CXX=g++ CC=cc CMAKE_FLAGS=
+  - CXX=g++ CC=cc CMAKE_FLAGS=-DRELEASE_BUILD=1
   - CMAKE_FLAGS="-DCMAKE_TOOLCHAIN_FILE=../src/platform_windows/linux-toolchain-mingw.cmake -DMINGW_TYPE=classic"
   - CMAKE_FLAGS="-DCMAKE_TOOLCHAIN_FILE=../src/platform_windows/linux-toolchain-mingw.cmake -DRELEASE_BUILD=1  -DMINGW_TYPE=classic"
 
 notifications:
   irc:
     channels:
-      - "irc.gamesurge.net#inexor"
+      - "irc.gamesurge.net#sauerfork"
     template: "%{repository_name}/%{branch} %{commit} - %{message}"
     use_notice: false
     skip_join: true
+after_success:
+  - cd $TRAVIS_BUILD_DIR
+  - export BUILD_NAME=$(echo "${TRAVIS_BRANCH}-${TRAVIS_JOB_NUMBER}-${TRAVIS_COMMIT}" | sed 's#/#-#')
+  - git clone --depth 1 https://github.com/sauerbraten-fork/sauerbraten-fork-data.git nightly
+  - rm -rf ./nightly/.git*
+  - cp -r ./bin_* nightly
+  - cp ./sauerbraten_unix nightly
+  - cp ./sauerbraten.bat nightly
+  - zip -r ${BUILD_NAME}.zip nightly
+  - echo "sending ${BUILD_NAME}.zip"
+  - curl --ftp-create-dirs -T "${BUILD_NAME}.zip" -u $FTP_USER:$FTP_PASSWORD ftp://37.59.98.138/
