Cloth simulation Added void pointers in modifiers and initializers Added flexible spring weaver initializer Added density fadeout modifier Cleanup

--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -81,6 +81,7 @@ set(CLIENT_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/modifiers/positiontrace
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/modifiers/subemitter
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/modifiers/vectorfield
+    ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/modifiers/densityfadeout
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/emitters/noop
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/emitters/point
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/emitters/cubic
@@ -97,6 +98,7 @@ set(CLIENT_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/initializers/randomvelocity
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/initializers/randomposition
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/initializers/randomparticletype
+    ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/initializers/springweaver
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/ptest
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/mu/muParser.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/mu/muParserBase.cpp
