--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -56,6 +56,7 @@ set(CLIENT_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/blob
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/osd
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/particles
+    ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/springs
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/emitter
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/renderer
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/modifier
