--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -84,6 +84,7 @@ set(CLIENT_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/modifiers/subemitter
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/modifiers/vectorfield
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/modifiers/densityfadeout
+    ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/modifiers/immortal
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/emitters/noop
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/emitters/point
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/emitters/cubic
