--- a/.travis.yml
+++ b/.travis.yml
@@ -22,10 +22,12 @@ env:
 
 
 notifications:
-  webhooks: http://n.tkte.ch/h/2910/Rm7oDLYIC1icyntUug11eWi1
+  webhooks:
+    urls:
+      - http://n.tkte.ch/h/2910/Rm7oDLYIC1icyntUug11eWi1
     on_success: always
     on_failure: always
-    on_start: change
+    on_start: never
 
 after_success:
   - git clone --depth 1 https://github.com/sauerbraten-fork/sauerbraten-fork-data.git nightly
