--- a/.travis.yml
+++ b/.travis.yml
@@ -1,40 +1,37 @@
 language: cpp
 before_install:
-  # Install dependencies
-  - sudo apt-get update
-  - sudo apt-get -y install build-essential zlib1g-dev libsdl1.2-dev libsdl-image1.2-dev libsdl-mixer1.2-dev libenet-dev
-  - sudo apt-get -y install mingw32
-
+- sudo apt-get update
+- sudo apt-get -y install build-essential zlib1g-dev libsdl1.2-dev libsdl-image1.2-dev
+  libsdl-mixer1.2-dev libenet-dev
+- sudo apt-get -y install mingw32
 script:
-  - (mkdir cmakebuild && cd cmakebuild && cmake $CMAKE_FLAGS .. && make -j5 install && cd .. && rm -rf cmakebuild)
-
+- (mkdir cmakebuild && cd cmakebuild && cmake $CMAKE_FLAGS .. && make -j5 install
+  && cd .. && rm -rf cmakebuild)
 compiler:
-  - clang
-  - gcc
-  
+- clang
+- gcc
 env:
   global:
-  - secure: "MTtHk1WtIXI9LNVw6I545sJZiI0QO6IZcgH0mcd7/P77RCFquiT+Rrf3PkOSfVweC9jHE/X9ZapmYFAAhPaeKaSHxNVid309pJDISf3EAwz9Ge1JZ3cMcmTv+XkKGUf7RsdJIk9wyvQ9J5VkOLILKA9sEHd/jSPKzA88jOFk15w="
-  - secure: "M/FV24V5PmynNb6qONaeAfxFcv6tFbG2yCzZ6XIJlCFdr6SWEhatLjBdOUNP+PMml1jPPL/35lVEsODO/I4cbXWL74U4zZwN81IypTZpWziW0N5lBvkIRbEgZZ6nyUSDA+HgOfm7Yr01nmMmX/cqxDBYWkCSD+cAGhXaajRxKqw="  
-
+  - secure: UUtdYLhd9+cY+bMrcRvvtjmsQBqM5L9zgzyLeQZLMmmWbHwLsfpQask9A8eD1oc1K1o0tYmK+Qk1flxNTbnUtlryPNgJxJ95a/TwLl1P9yN6plMleNbuwMs5dyS9VnmcK3LzDFuoje/9rtX2seNR2PW2EJSvPz20ENaT693Kfa8=
+  - secure: G8rRE17KDx83crRLQSEkIyvMbXlbpKDvIYoKE+y9Bg3qu79tsB/RrNdo6OGHx4x3KhBGpuo4NdN/4FAGS599P4W+KN3kNr9VFSCMJhJK59+KkYfGq2rX1oGDhB4B1xjVk0tj6bFIJ333hVLEYFviIKYxRSZfnKa0RmgBJZbvMfs=
   matrix:
   - CMAKE_FLAGS=
   - CMAKE_FLAGS=-DRELEASE_BUILD=1
-  - CMAKE_FLAGS="-DCMAKE_TOOLCHAIN_FILE=../src/platform_windows/linux-toolchain-mingw.cmake -DMINGW_TYPE=classic"
-  - CMAKE_FLAGS="-DCMAKE_TOOLCHAIN_FILE=../src/platform_windows/linux-toolchain-mingw.cmake -DRELEASE_BUILD=1  -DMINGW_TYPE=classic"
-
-
+  - CMAKE_FLAGS="-DCMAKE_TOOLCHAIN_FILE=../src/platform_windows/linux-toolchain-mingw.cmake
+    -DMINGW_TYPE=classic"
+  - CMAKE_FLAGS="-DCMAKE_TOOLCHAIN_FILE=../src/platform_windows/linux-toolchain-mingw.cmake
+    -DRELEASE_BUILD=1  -DMINGW_TYPE=classic"
 notifications:
   webhooks:
     urls:
-      - http://n.tkte.ch/h/2910/Rm7oDLYIC1icyntUug11eWi1
+    - http://n.tkte.ch/h/2910/Rm7oDLYIC1icyntUug11eWi1
     on_success: always
     on_failure: always
     on_start: never
-
 after_success:
-  - git clone --depth 1 https://github.com/sauerbraten-fork/sauerbraten-fork-data.git nightly
-  - cp -r bin_* nightly && cp sauerbraten_unix nightly && cp sauerbraten.bat nightly 
-  - VER="$TRAVIS_COMMIT-$TRAVIS_BUILD_ID"
-  - zip ${VER}.zip nightly
-  - "curl --ftp-create-dirs -T ${VER}.zip -u $FTP_USER:$FTP_PASSWORD ftps://37.59.98.138/nightly/"
+- git clone --depth 1 https://github.com/sauerbraten-fork/sauerbraten-fork-data.git
+  nightly
+- cp -r bin_* nightly && cp sauerbraten_unix nightly && cp sauerbraten.bat nightly
+- VER="$TRAVIS_COMMIT-$TRAVIS_BUILD_ID"
+- zip ${VER}.zip nightly
+- curl --ftp-create-dirs --ftp-ssl -k -T ${VER}.zip -u $FTP_USER:$FTP_PASSWORD ftp://37.59.98.138/
