--- a/.travis.yml
+++ b/.travis.yml
@@ -35,5 +35,5 @@ after_success:
   - git clone --depth 1 https://github.com/sauerbraten-fork/sauerbraten-fork-data.git nightly
   - cp -r bin_* nightly && cp sauerbraten_unix nightly && cp sauerbraten.bat nightly 
   - VER="$TRAVIS_COMMIT-$TRAVIS_BUILD_ID"
-  - zip ${VER}.zip nightly
+  - zip -r ${VER} nightly
   - "curl --ftp-create-dirs -T ${VER}.zip -u $FTP_USER:$FTP_PASSWORD ftp://37.59.98.138/"
