--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ notifications:
 
 after_success:
   - git clone --depth 1 https://github.com/sauerbraten-fork/sauerbraten-fork-data.git nightly
-  - cp -r bin_* sauerbraten_unix sauerbraten.bat nightly 
-  - VER="$TRAVIS_BRANCH-$TRAVIS_JOB_NUMBER-$TRAVIS_COMMIT_RANGE"
-  - zip -r ${VER} nightly
+  - cp -r bin_* sauerbraten_unix sauerbraten.bat nightly
+  - ls
+  - zip -r $TRAVIS_JOB_NUMBER nightly
   - "curl --ftp-create-dirs -T ${VER}.zip -u $FTP_USER:$FTP_PASSWORD ftp://37.59.98.138/"
