--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,6 @@ notifications:
 
 after_success:
   - git clone --depth 1 https://github.com/sauerbraten-fork/sauerbraten-fork-data.git nightly
-  - cp -r bin_* sauerbraten_unix sauerbraten.bat nightly
-  - ls
+  - cp -r /home/travis/build/sauerbraten-fork/sauerbraten-fork/bin_* /home/travis/build/sauerbraten-fork/sauerbraten-fork/sauerbraten_unix /home/travis/build/sauerbraten-fork/sauerbraten-fork/sauerbraten.bat nightly
   - zip -r $TRAVIS_JOB_NUMBER nightly
-  - "curl --ftp-create-dirs -T ${VER}.zip -u $FTP_USER:$FTP_PASSWORD ftp://37.59.98.138/"
+  - "curl --ftp-create-dirs -T ${TRAVIS_JOB_NUMBER}.zip -u $FTP_USER:$FTP_PASSWORD ftp://37.59.98.138/"
