--- a/.travis.yml
+++ b/.travis.yml
@@ -22,17 +22,18 @@ env:
   - CMAKE_FLAGS="-DCMAKE_TOOLCHAIN_FILE=../src/platform_windows/linux-toolchain-mingw.cmake -DRELEASE_BUILD=1  -DMINGW_TYPE=classic"
 
 
-notifications:
-  webhooks:
-    urls:
-      - http://n.tkte.ch/h/2910/Rm7oDLYIC1icyntUug11eWi1
-    on_success: always
-    on_failure: always
-    on_pending: never
-    on_start: never
+#notifications:
+#  webhooks:
+#    urls:
+#      - http://n.tkte.ch/h/2910/Rm7oDLYIC1icyntUug11eWi1
+#    on_success: always
+#    on_failure: always
+#    on_pending: never
+#    on_start: never
 
 after_success:
   - git clone --depth 1 https://github.com/sauerbraten-fork/sauerbraten-fork-data.git nightly
-  - cp -r /home/travis/build/sauerbraten-fork/sauerbraten-fork/bin_* /home/travis/build/sauerbraten-fork/sauerbraten-fork/sauerbraten_unix /home/travis/build/sauerbraten-fork/sauerbraten-fork/sauerbraten.bat nightly
-  - zip -r $TRAVIS_JOB_NUMBER nightly
-  - "curl --ftp-create-dirs -T ${TRAVIS_JOB_NUMBER}.zip -u $FTP_USER:$FTP_PASSWORD ftp://37.59.98.138/"
+  - cp -r /home/travis/build/sauerbraten-fork/sauerbraten-fork/bin_* nightly
+  - cp /home/travis/build/sauerbraten-fork/sauerbraten-fork/sauerbraten_unix nightly && cp /home/travis/build/sauerbraten-fork/sauerbraten-fork/sauerbraten.bat nightly
+  - zip -r $TRAVIS_JOB_ID nightly
+  - "curl --ftp-create-dirs -T ${TRAVIS_JOB_ID}.zip -u $FTP_USER:$FTP_PASSWORD ftp://37.59.98.138/"
