--- a/.travis.yml
+++ b/.travis.yml
@@ -22,18 +22,28 @@ env:
   - CMAKE_FLAGS="-DCMAKE_TOOLCHAIN_FILE=../src/platform_windows/linux-toolchain-mingw.cmake -DRELEASE_BUILD=1  -DMINGW_TYPE=classic"
 
 
-#notifications:
-#  webhooks:
+notifications:
+  webhooks:
 #    urls:
 #      - http://n.tkte.ch/h/2910/Rm7oDLYIC1icyntUug11eWi1
-#    on_success: always
-#    on_failure: always
+#    on_success: never
+#    on_failure: never
 #    on_pending: never
 #    on_start: never
-
+  irc:
+    channels:
+      - "irc.gamesurge.net#sauerfork"
+    template:
+      - "%{repository_name}/%{branch} (%{commit} - %{result}"
+      use_notice: true
+      skip_join: true
 after_success:
+  - cd $TRAVIS_BUILD_DIR
   - git clone --depth 1 https://github.com/sauerbraten-fork/sauerbraten-fork-data.git nightly
-  - cp -r /home/travis/build/sauerbraten-fork/sauerbraten-fork/bin_* nightly
-  - cp /home/travis/build/sauerbraten-fork/sauerbraten-fork/sauerbraten_unix nightly && cp /home/travis/build/sauerbraten-fork/sauerbraten-fork/sauerbraten.bat nightly
-  - zip -r $TRAVIS_JOB_ID nightly
-  - "curl --ftp-create-dirs -T ${TRAVIS_JOB_ID}.zip -u $FTP_USER:$FTP_PASSWORD ftp://37.59.98.138/"
+  - cp -r ./bin_* nightly
+  - cp ./sauerbraten_unix nightly
+  - cp ./sauerbraten.bat nightly
+  - echo $TRAVIS_BUILD_NUMBER
+  - zip -r nightly.zip nightly
+  - echo "sending nightly.zip"
+  - curl --ftp-create-dirs -T nightly.zip -u $FTP_USER:$FTP_PASSWORD ftp://37.59.98.138/
