update cmake to sdl2

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,42 +10,42 @@ if(${BUILD_TARGET_WINDOWS} AND ${CMAKE_C_COMPILER} MATCHES "mingw")
     set(BUILD_EXTRA_LIBS ${BUILD_EXTRA_LIBS} -static-libgcc)
 endif()
 
-message(STATUS "Detecting SDL...")
+message(STATUS "Detecting SDL2...")
 if(NOT ${BUILD_TARGET_WINDOWS} AND NOT ${BUILD_TARGET_OSX})
-    if(NOT BUILD_SDL_LOCAL AND PKG_CONFIG_FOUND)
-        message(STATUS "Using pkg-config to detect SDL...")
-        pkg_check_modules(SDL QUIET sdl)
-        if(SDL_FOUND)
-            message(STATUS "Found SDL.")
-            message(STATUS "include: ${SDL_INCLUDE_DIRS}")
+    if(NOT BUILD_SDL2_LOCAL AND PKG_CONFIG_FOUND)
+        message(STATUS "Using pkg-config to detect SDL2...")
+        pkg_check_modules(SDL2 QUIET sdl2)
+        if(SDL2_FOUND)
+            message(STATUS "Found SDL2.")
+            message(STATUS "include: ${SDL2_INCLUDE_DIRS}")
         else()
-            message(FATAL_ERROR "SDL not found.")
+            message(FATAL_ERROR "SDL2 not found.")
         endif()
     else()
         if(PKG_CONFIG_FOUND)
-            message(STATUS "Using local SDL.")
+            message(STATUS "Using local SDL2.")
         else()
-            message(STATUS "Using local SDL. (could not find PKG_CONFIG)")
+            message(STATUS "Using local SDL2. (could not find PKG_CONFIG)")
         endif()
-        set(SDL_LIBRARIES "SDL")
+        set(SDL2_LIBRARIES "SDL2")
     endif()
-    set(SDL_LIBRARIES "${SDL_LIBRARIES};SDL_image;SDL_mixer")
+    set(SDL2_LIBRARIES "${SDL2_LIBRARIES};SDL2_image;SDL2_mixer")
     add_definitions(-D_REENTRANT -D_THREAD_SAFE)
 elseif(${BUILD_TARGET_OSX})
-    find_library(SDL_LIBRARY SDL)
-    find_library(SDL_IMAGE_LIBRARY SDL_image)
-    find_library(SDL_MIXER_LIBRARY SDL_mixer)
+    find_library(SDL2_LIBRARY SDL2)
+    find_library(SDL2_IMAGE_LIBRARY SDL2_image)
+    find_library(SDL2_MIXER_LIBRARY SDL2_mixer)
 
     find_library(CORESERVICES_LIBRARY CoreServices)
     find_library(COCOA_LIBRARY Cocoa)
 
-    set(SDL_LIBRARIES "${SDL_LIBRARY};${SDL_MIXER_LIBRARY};${SDL_IMAGE_LIBRARY};${CORESERVICES_LIBRARY};${COCOA_LIBRARY}")
+    set(SDL2_LIBRARIES "${SDL2_LIBRARY};${SDL2_MIXER_LIBRARY};${SDL2_IMAGE_LIBRARY};${CORESERVICES_LIBRARY};${COCOA_LIBRARY}")
     
-    find_path(SDL_INCLUDE_DIR SDL.h)
-    find_path(SDL_IMAGE_INCLUDE_DIR SDL_image.h)
-    find_path(SDL_MIXER_INCLUDE_DIR SDL_mixer.h)
-    set(SDL_INCLUDE_DIRS "${SDL_INCLUDE_DIR};${SDL_IMAGE_INCLUDE_DIR};${SDL_MIXER_INCLUDE_DIR}")
-    #include_directories(${SDL_INCLUDE_DIR} ${SDL_IMAGE_INCLUDE_DIR} ${SDL_MIXER_INCLUDE_DIR})
+    find_path(SDL2_INCLUDE_DIR SDL.h)
+    find_path(SDL2_IMAGE_INCLUDE_DIR SDL2_image.h)
+    find_path(SDL2_MIXER_INCLUDE_DIR SDL2_mixer.h)
+    set(SDL2_INCLUDE_DIRS "${SDL2_INCLUDE_DIR};${SDL2_IMAGE_INCLUDE_DIR};${SDL2_MIXER_INCLUDE_DIR}")
+    #include_directories(${SDL2_INCLUDE_DIR} ${SDL2_IMAGE_INCLUDE_DIR} ${SDL2_MIXER_INCLUDE_DIR})
 endif()
 
 if(NOT DEFINED ENET_LIBRARIES AND NOT DEFINED LOCAL_ENET)
@@ -63,7 +63,7 @@ endif()
 
 include_directories(
     ${ENET_INCLUDE_DIRS}
-    ${SDL_INCLUDE_DIRS}
+    ${SDL2_INCLUDE_DIRS}
     ${CMAKE_CURRENT_SOURCE_DIR}
     ${CMAKE_CURRENT_SOURCE_DIR}/shared
     ${CMAKE_CURRENT_SOURCE_DIR}/engine
