--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -90,7 +90,7 @@ set(SB_CLIENT_BINARY client_${BUILD_PLATFORM_BIN}_${BUILD_TARGET_ARCH} CACHE INT
 add_executable(${SB_CLIENT_BINARY} ${CLIENT_SOURCES})
 target_link_libraries(${SB_CLIENT_BINARY}
     ${ENET_LIBRARIES}
-    ${SDL_LIBRARIES}
+    ${SDL2_LIBRARIES}
     ${OPENGL_LIBRARIES}
     ${ZLIB_LIBRARIES}
     ${BUILD_EXTRA_LIBS}
