--- a/.travis.yml
+++ b/.travis.yml
@@ -4,16 +4,14 @@ before_install:
   - sudo apt-get update
   - sudo apt-get -y install build-essential zlib1g-dev libenet-dev
   - sudo apt-get -y install mingw32
-  - mkdir dummyprefix
-  - export PREFIX=$PWD/dummyprefix
-  - export PKG_CONFIG_PATH=$PREFIX/lib/pkgconfig
-  - export PATH=$PATH:$PWD/rock/bin:$PWD/dummyprefix/bin
+  - mkdir SDL2build
+  - cd SDL2build
   - wget http://libsdl.org/release/SDL2-2.0.1.tar.gz -O - | tar xz
-  - (cd SDL2-2.0.1 && ./configure --prefix=$PREFIX && make -j5 && make install)
+  - (cd SDL2-2.0.1 && ./configure && make -j5 && make install)
   - wget http://www.libsdl.org/projects/SDL_image/release/SDL2_image-2.0.0.tar.gz -O - | tar xz
-  - (cd SDL2_image-2.0.0 && ./configure --prefix=$PREFIX && make -j5 && make install)
+  - (cd SDL2_image-2.0.0 && ./configure && make -j5 && make install)
   - wget http://www.libsdl.org/projects/SDL_mixer/release/SDL2_mixer-2.0.0.tar.gz -O - | tar xz
-  - (cd SDL2_mixer-2.0.0 && ./configure --prefix=$PREFIX && make -j5 && make install)
+  - (cd SDL2_mixer-2.0.0 && ./configure && make -j5 && make install)
 
 script:
   - (mkdir cmakebuild && cd cmakebuild && cmake $CMAKE_FLAGS .. && make -j5 && cd .. && rm -rf cmakebuild)
