bundle data-repository just for the master, but still deploy otherwise
name the zip accordingly to the plattform (linux or windows)

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,4 @@ notifications:
     template: "%{repository_name}/%{branch} %{commit} - %{message}"
     use_notice: false
     skip_join: true
-after_success:
-  - chmod ugo+x ./nightly-build.sh
-  - bash ./nightly-build.sh
+after_success: bash ./nightly-build.sh
