--- a/server-init.cfg
+++ b/server-init.cfg
@@ -39,8 +39,8 @@ serverdesc "Bomberman Server Simulation"
 // controls whether or not the server reports to the masterserver
 updatemaster 1
 
-// the hostname and port of the masterserver (default: sauerbraten-fork.org)
-// mastername sauerbraten-fork.org
+// the hostname and port of the masterserver (default: master.inexor.org)
+// mastername master.inexor.org
 // masterport 28787
 
 // optional message of the day to send to players on connect
