Fix value of BUILD_INSTALL_BIN_DIR to include bin_ and to be actually set on on windows.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -142,7 +142,7 @@ if(NOT BUILD_INSTALL_DIR)
 endif()
 
 if(NOT BUILD_INSTALL_BIN_DIR)
-    set(BUILD_INSTALL_BIN_DIR "${BUILD_INSTALL_DIR}/${BUILD_PLATFORM_BIN_DIR}")
+    set(BUILD_INSTALL_BIN_DIR "${BUILD_INSTALL_DIR}/bin_${BUILD_PLATFORM_BIN_DIR}")
 
     set(CMAKE_CURRENT_BINARY_DIR ${BUILD_INSTALL_BIN_DIR})
     set(INSTALL_HEADER_DIR      ${BUILD_TEMP_INCLUDE_DIR})
