--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -4,6 +4,8 @@ if(${BUILD_TARGET_WINDOWS})
     set(BUILD_EXTRA_LIBS ${BUILD_EXTRA_LIBS} ws2_32 winmm)
     if(GNU) 
         add_definitions(-mwindows)
+    elseif(MSVC)
+        set(BUILD_EXTRA_LIBS ${BUILD_EXTRA_LIBS} dbghelp)
     endif()
 elseif(${BUILD_TARGET_LINUX})
     set(BUILD_EXTRA_LIBS ${BUILD_EXTRA_LIBS} dl rt)
@@ -28,6 +30,7 @@ set(CLIENT_SOURCES_ENGINE
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/decal
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/dynlight
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/grass
+    ${CMAKE_CURRENT_SOURCE_DIR}/../engine/json
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/main
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/material
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/menus
