--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -50,10 +50,13 @@ prepend(CLIENT_SOURCES_FPSGAME ${SOURCE_DIR}/fpsgame
     waypoint.cpp
     weapon.cpp)
 
-set(CLIENT_SOURCES ${CLIENT_SOURCES_ENGINE}
-  ${CLIENT_SOURCES_FPSGAME} ${COMMON_SOURCES}
+set(CLIENT_SOURCES 
+    ${CLIENT_SOURCES_ENGINE}
+    ${CLIENT_SOURCES_FPSGAME} 
+	${COMMON_SOURCES}
   CACHE INTERNAL "")
 
+# IDE's with subfolders need source_groups:
 group_modules()
 
 # Set Binary name
@@ -97,10 +100,15 @@ else()
 endif()
 
 
-set(CLIENT_LIBS ${COMMON_LIBS} ${SDL2_LIBRARIES}
-  ${OPENGL_LIBRARIES} ${ADDITIONAL_LIBRARIES} CACHE INTERNAL "")
+set(CLIENT_LIBRARIES
+  ${COMMON_LIBS}
+  ${SDL2_LIBRARIES}
+  ${OPENGL_LIBRARIES}
+  ${CEF_LIBRARIES}
+  ${ADDITIONAL_LIBRARIES}
+  CACHE INTERNAL "")
 
-target_link_libraries_wrapper(${CLIENT_BINARY} ${CLIENT_LIBS})
+target_link_libraries_wrapper(${CLIENT_BINARY} ${CLIENT_LIBRARIES})
 
 config_net(${CLIENT_BINARY})
 config_rpc(${CLIENT_BINARY})
@@ -110,6 +118,7 @@ message(STATUS "CLIENT SDL2_LIBRARIES:       ${SDL2_LIBRARIES}")
 message(STATUS "CLIENT OPENGL_LIBRARIES:     ${OPENGL_LIBRARIES}")
 message(STATUS "CLIENT ZLIB_LIBRARIES:       ${ZLIB_LIBRARIES}")
 message(STATUS "CLIENT PROTOBUF_LIBRARIES:   ${PROTOBUF_LIBRARIES}")
+message(STATUS "CLIENT CEF_LIBRARIES:        ${CEF_LIBRARIES}")
 message(STATUS "CLIENT ADDITIONAL_LIBRARIES: ${ADDITIONAL_LIBRARIES}")
 message(STATUS "CLIENT INCLUDE DIRECTORIES:  ${INCLUDE_DIRECTORIES}")
 
