--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,8 +97,8 @@ if(MSVC)
         set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /OPT:REF,ICF /LTCG /GF") #optimizations
     endif()
 else()
-    set(BUILD_C_FLAGS "-fomit-frame-pointer -Wall -fsigned-char")
-    set(BUILD_CXX_FLAGS "-fno-rtti")
+    set(BUILD_C_FLAGS "-fomit-frame-pointer -Wall -Wextra -fsigned-char")
+    set(BUILD_CXX_FLAGS "-std=c++11 -Wall -Wextra")
     set(BUILD_DEBUG_FLAGS   "${BUILD_FLAGS} -O0 -g -D_DEBUG -DBUILD_DEBUG")
     set(BUILD_RELEASE_FLAGS "${BUILD_FLAGS} -O3 -DNDEBUG -DBUILD_NO_DEBUG")
 endif()
